[package]
name = "signal-decrypt-backup-rust"
version = "0.1.0"
edition = "2021"
description = "Get all the data from your Signal backup."
repository = "https://git.duskflower.dev/duskflower/signal-decrypt-backup-rust"
license = "GPL-3-only"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.13.4"

[dependencies]
aes = "0.8"
block-modes = "0.9"
hmac = "0.12"
sha2 = "0.10"
serde_json = "1.0"
hkdf = "0.12.4"
base64 = "0.22.1"
rusqlite = "0.32.1"
rpassword = "7.3.1"
prost = "0.13.4"
prost-types = "0.13.4"
ctr = "0.9.2"
cipher = "0.4.4"
